plex/plex-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        # Prevent scheduling on a specific node
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - w386.k8s.my.lan
      containers:
        - name: plex
          image: harbor.andreybondarenko.com/dockerhub/linuxserver/plex:latest
          resources:
            requests:
              memory: 1268Mi
              cpu: "10m"
            limits:
              memory: 1268Mi
          volumeMounts:
            - name: plex-lib
              mountPath: /data
            - name: plex-conf-lh2
              mountPath: /config
            - name: dev-dri
              mountPath: /dev/dri
              readOnly: false
          ports:
            - containerPort: 32400
            - containerPort: 1900
              protocol: UDP
            - containerPort: 5353
              protocol: UDP
            - containerPort: 8324
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
            - containerPort: 32469
      volumes:
        - name: plex-conf-lh2
          persistentVolumeClaim:
            claimName: plex-conf-lh2
        - name: plex-lib
          persistentVolumeClaim:
            claimName: plex-lib
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
