plex/plex-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: "plex"
  labels:
    name: plex
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - port: 32400
      name: "plex"
    - port: 1900
      protocol: UDP
      name: "dlna"
    - port: 5353
      protocol: UDP
      name: "avahi"
    - port: 8324
      name: "companion"
    - port: 32410
      name: "gdm1"
      protocol: UDP
    - port: 32412
      protocol: UDP
      name: "gdm2"
    - port: 32413
      protocol: UDP
      name: "gdm3"
    - port: 32414
      protocol: UDP
      name: "gdm4"
    - port: 32469
      name: "dlna2"
  externalIPs:
    - 192.168.1.209
  selector:
    app: plex
  type: NodePort
